--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Rumble</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+    <aside>
+
+    </aside>
+    <main>
+        
+    </main>
 </body>
 </html>
