feat/header con stile e responsive

--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
 </head>
 <body>
     <header>
-
+        <section class="logo-section">
+          <img src="./img/hamburger-icon.svg" alt="Menu">
+          <img src="./img/logo.svg" alt="Logo">
+        </section>
+        <section class="searchbar-section">
+            <input type="text" placeholder="Search">
+            <button><img src="./img/search-icon.svg" alt="Search"></button>
+        </section>
+        <section class="login-section">
+             <button class="head-button">Sign In</button>
+             <button class="head-button" id="right-head-button">Sign Up</button>
+        </section>
     </header>
     <nav>
-
+       
     </nav>
     <aside>
 
     </aside>
     <main>
-        
+
     </main>
 </body>
 </html>
