feat/sidebar con stile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,47 @@
        
     </nav>
     <aside>
-
+       <ul class="side-bar">
+        <li><a href="./"><img src="./img/menu/home.svg" alt="Home"><span>Home</span></a></li>
+        <li><a href="./"><img src="./img/menu/editor-picks.svg" alt="editor-picks"><span>Editor Picks</span></a></li>
+        <li><a href="./"><img src="./img/menu/trending.svg" alt="trending"><span>Trending</span></a></li>
+        <li><a href="./"><img src="./img/menu/browse.svg" alt="browse"><span>Browse</span></a></li>
+        <li><a href="./"><img src="./img/menu/latest.svg" alt="latest"><span>Latest</span></a></li>
+       </ul>
+       <br><hr><br>
+       <ul class="side-bar">
+        <span>Featured</span>
+        <br><br>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture1" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture2" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture3" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture4" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture5" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture6" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture7" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture8" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture9" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture10" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture11" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture12" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture13" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture14" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture15" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture16" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture17" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture18" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture19" alt=""></a></li>
+        <li><a href="./" class="side-img"><img src="https://source.unsplash.com/random/30x30/?profile-picture20" alt=""></a></li>
+       </ul>
+       <br><hr><br>
+       <ul class="side-bar">
+        <span id="Theme-span">Theme</span>
+        <br><br>
+        <li><a href="./" class="side-system"><img src="./img/theme/system-default.svg" alt=""><span id="system-default">System Default</span></a></li>
+        <li><a href="./" class="side-system"><img src="./img/theme/dark-mode.svg" alt=""><span>Dark mode</span></a></li>
+        <li><a href="./" class="side-system"><img src="./img/theme/light-mode.svg" alt=""><span>Light Mode</span></a></li>
+       </ul>
+       <br><br>
     </aside>
     <main>
 
